--- a/Application/Admin/View/Order/sellerlist.html
+++ b/Application/Admin/View/Order/sellerlist.html
@@ -81,7 +81,14 @@
 														}
 														?>】</b>
 													<?php } ?>
-												</a> </p>
+												</a>
+													<?php
+													$_goods = M("Goods")->where(['goods_id' => $goods['goods_id']])->find();
+														if ($_goods['water_mode']){
+													?>
+													<a class="btn btn-danger" href="{:U('Order/printWater?order_sn='.$ol['order_sn'].'&goods_id='.$goods['goods_id'])}" target="_blank" >打印水票单</a>
+													<?php } ?>
+												</p>
 											</div>
 											<div class="desc" style="width:90px;margin-left: 20px;"> <i class="special-num">单价：{$goods.price}</i><br>
 												<i class="special-num">数量：{$goods.prosum}</i><br>
