--- a/Application/Mobile/View/Public/register.html
+++ b/Application/Mobile/View/Public/register.html
@@ -14,6 +14,16 @@
 			h5 {
 				margin: 5px 7px;
 			}
+			.mui-input-row.special label~input {
+				float: left;
+				width: 60%;
+				margin-bottom: 0;
+				padding-left: 0;
+				border: 0;
+				box-sizing: border-box;
+				padding-left: 15%;
+			}
+
 		</style>
 	</head>
 
@@ -47,12 +57,12 @@
 						<input type="text" id="sms_code" name="sms_code" placeholder="收到的短信验证码">
 						
 					</div>
-					<div class="mui-input-row">
+					<div class="mui-input-row special" >
 						<label style="width: 80px;padding-left: 0px;padding-right: 0px; font-size:13px ; text-align: right;">密码：</label>
 						<input type="password" id="password" placeholder="登陆密码">
 						
 					</div>
-					<div class="mui-input-row">
+					<div class="mui-input-row special">
 						<label style="width: 80px;padding-left: 0px;padding-right: 0px; font-size:13px ; text-align: right;">密码确认：</label>
 						<input type="password" id="password2" placeholder="重复登陆密码">
 						
