brother api online.

--- a/Application/Mobile/View/Public/register.html
+++ b/Application/Mobile/View/Public/register.html
@@ -211,7 +211,8 @@
                                }
 							   alert("注册成功");
 
-							   window.location.href="http://a.app.qq.com/o/simple.jsp?pkgname=com.sdyr.tongdui";
+//							   window.location.href="http://a.app.qq.com/o/simple.jsp?pkgname=com.sdyr.tongdui";
+							   window.location.href="http://www.hxg19.com";
 
                            }
                        });
